Big ReadableText improvements moved slice-dependent methods from ReadonlyText and SubText to ReadableText made slice abstract in ReadableText

--- a/doc/TODO
+++ b/doc/TODO
@@ -2,7 +2,7 @@
 
 
 #### NOW
-
+    Text - splitByCammelCase - make sure it works correctly in all cases
 
 #### SOON
     add full implementation for editable text
