--- a/doc/TODO
+++ b/doc/TODO
@@ -1,15 +1,12 @@
 #### DONE
-text fixes
-renamed editable text to text (in previous commit)
+
 
 #### NOW
-    Text - splitByCammelCase - make sure it works correctly in all cases
+    add more readonly collections
 
 #### SOON
+    Text - splitByCammelCase - make sure it works correctly in all cases
+
+#### IDEAS
     add full implementation for editable text
-    add copy method for readables
-
-#### NOW
-    
-
-#### DONE
+    add copy method for readables?
